--- a/package.json
+++ b/package.json
@@ -6,8 +6,12 @@
     "@testing-library/jest-dom": "^5.15.0",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "axios": "^0.24.0",
     "chart.js": "^3.6.2",
     "concurrently": "^6.4.0",
+    "firebase": "^9.6.1",
+    "login": "^0.8.0",
+    "netlify-identity-widget": "^1.9.2",
     "react": "^17.0.2",
     "react-chartjs-2": "^4.0.0",
     "react-dom": "^17.0.2",
