Updated Import to ES6

--- a/Backend/package.json
+++ b/Backend/package.json
@@ -3,8 +3,10 @@
   "version": "1.0.0",
   "description": "Your Online Personal Expense Manager. Track your personal expense and have access to them from anywhere at anytime.",
   "main": "index.js",
+  "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon index.js"
   },
   "author": "Abhishek",
   "license": "ISC",
