--- a/package.json
+++ b/package.json
@@ -10,13 +10,14 @@
     "chart.js": "^3.6.2",
     "concurrently": "^6.4.0",
     "firebase": "^9.6.1",
+    "heroku-cli": "^7.0.9",
     "login": "^0.8.0",
     "netlify-identity-widget": "^1.9.2",
     "react": "^17.0.2",
     "react-chartjs-2": "^4.0.0",
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.0.2",
-    "react-scripts": "4.0.3",
+    "react-scripts": "^5.0.0",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
