--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "expense-manager",
   "version": "0.1.0",
   "private": true,
+  "homepage": "/build",
   "dependencies": {
     "@testing-library/jest-dom": "^5.15.0",
     "@testing-library/react": "^11.2.7",
