--- a/package.json
+++ b/package.json
@@ -6,18 +6,20 @@
     "@testing-library/jest-dom": "^5.15.0",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "@types/jest": "^27.4.1",
+    "@types/node": "^17.0.24",
+    "@types/react": "^18.0.5",
+    "@types/react-dom": "^18.0.1",
     "axios": "^0.24.0",
     "chart.js": "^3.6.2",
     "concurrently": "^6.4.0",
-    "firebase": "^9.6.1",
-    "heroku-cli": "^7.0.9",
     "login": "^0.8.0",
-    "netlify-identity-widget": "^1.9.2",
     "react": "^17.0.2",
     "react-chartjs-2": "^4.0.0",
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.0.2",
     "react-scripts": "^5.0.0",
+    "typescript": "^4.6.3",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
