--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@types/node": "^17.0.24",
     "@types/react": "^18.0.5",
     "@types/react-dom": "^18.0.1",
+    "@types/styled-components": "^5.1.25",
     "axios": "^0.24.0",
     "chart.js": "^3.6.2",
     "concurrently": "^6.4.0",
@@ -19,6 +20,7 @@
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.0.2",
     "react-scripts": "^5.0.0",
+    "styled-components": "^5.3.5",
     "typescript": "^4.6.3",
     "web-vitals": "^1.1.2"
   },
