--- a/package.json
+++ b/package.json
@@ -13,8 +13,6 @@
     "@types/styled-components": "^5.1.25",
     "axios": "^0.24.0",
     "chart.js": "^3.6.2",
-    "concurrently": "^6.4.0",
-    "login": "^0.8.0",
     "react": "^17.0.2",
     "react-chartjs-2": "^4.0.0",
     "react-dom": "^17.0.2",
@@ -28,10 +26,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "both": "concurrently \"npm run start\"  \"nodemon Backend/index.js \"",
-    "storybook": "start-storybook -p 6006 -s public",
-    "build-storybook": "build-storybook -s public"
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
