--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "@types/react-dom": "^18.0.1",
     "@types/styled-components": "^5.1.25",
     "axios": "^0.24.0",
+    "chart.js": "^4.1.1",
     "react": "^17.0.2",
+    "react-chartjs-2": "^5.1.0",
     "react-dom": "^17.0.2",
     "react-icons": "^4.4.0",
     "react-redux": "^8.0.2",
